# yaspar-ir

./: .gitignore  Cargo.toml  README.md
.github/actions/setup-cvc5/: action.yaml
.github/workflows/: build.yaml
src/: ast.rs  containers.rs  cvc5.rs  lib.rs  statics.rs  traits.rs
src/allocator/: mod.rs
src/ast/: boilerplates.rs  cnf.rs  fv.rs  gsubst.rs  implicant.rs  letelim.rs  letintro.rs  mono.rs  subst.rs
src/ast/ctx/: bindings.rs  checked.rs  ds.rs  dt.rs  fun.rs  init.rs  local.rs  matching.rs  mod.rs  quantifier.rs  recs.rs  utils.rs
src/raw/: alg.rs  instance.rs  letelim.rs  mod.rs  tc.rs
src/raw/alg/: kind.rs  rec.rs  rec_memo.rs
src/raw/tc/: app.rs  unif.rs
src/untyped/: instance.rs  mod.rs
tests/: cvc5.rs  cvc5_finite_sets.rs  finite_sets.rs  fv.rs  integration.rs  nullary_constructor.rs  rec.rs  rec_memo.rs  regression.rs  substitutions.rs
tests/resources/: result.json
tests/resources/AUFLIA/: result.json
tests/resources/AUFLIRA/: result.json
tests/resources/AUFNIRA/: result.json
tests/resources/LIA/: result.json
tests/resources/LRA/: result.json
tests/resources/NIA/: result.json
tests/resources/NRA/: result.json
tests/resources/QF_AUFLIA/: result.json
tests/resources/QF_AX/: result.json
tests/resources/QF_BV/: result.json
tests/resources/QF_IDL/: result.json
tests/resources/QF_LIA/: result.json
tests/resources/QF_LIRA/: result.json
tests/resources/QF_LRA/: result.json
tests/resources/QF_NIA/: result.json
tests/resources/QF_NIRA/: result.json
tests/resources/QF_NRA/: result.json
(+130 files in other folders)
