[package]
name = "yaspar-ir"
version = "2.7.5"
edition = "2024"
readme = "README.md"
license = "Apache-2.0"
description = "This crate provides a few representations of SMT scripts and other functionalities."
authors = ["the Amazon Trusted Solver team"]
keywords = ["SMT", "solver", "logic"]
categories = ["science"]
homepage = "https://github.com/yaspar-org/yaspar-ir"
repository = "https://github.com/yaspar-org/yaspar-ir"
exclude = ["tests/resources", "tests/regression.rs"]

[features]
default = ["none"]
all = ["cnf", "implicant-generation", "finite-set"]
cnf = ["dep:sat-interface", "cache"]
implicant-generation = ["cnf"]
cvc5 = ["dep:cvc5"]
finite-set = []
cache = []
none = []
regression = ["all", "cvc5"]

[dependencies]
yaspar = "2.7"
sat-interface = { version = "0.1", optional = true }
cvc5 = { version = "0.4", optional = true, features = ["static"] }
dashu = { version = "0.4.2", features = ["serde", "num-traits", "num-order"] }
hashconsing = "1.6"
paste = "1"
lazy_static = "1.5.0"
regex = "1.11"
serde = { version = "1", features = ["derive"] }
lalrpop-util = "0.22"
either = "1.15"
num-traits = "0.2.19"
num-order = "1.2.0"
delegate = "0.13"
bimap = "0.6"

[lib]
name = "yaspar_ir"
path = "src/lib.rs"
crate-type = ["lib"]

[package.metadata.docs.rs]
features = ["all", "cvc5"]

[dev-dependencies]
serde_json = "1"
dashu = { version = "0.4.2", features = ["serde", "num-traits", "num-order"] }
